moved to ipynb 2

--- a/index.ipynb
+++ b/index.ipynb
@@ -15,7 +15,7 @@
     "There are a lot of different ways to do version control. You could save a new file every time you make a change, timestamp that file, and place all of those files into a timestamped folder. You could track all of your changes in a spreadsheet with copious notes. Or you could use dedicated version control software. Guess which method programmers use?\n",
     "\n",
     "\n",
-    "## Objectives:\n",
+    "## Objectives\n",
     "\n",
     "You will be able to:\n",
     "* Understand the reason for using git\n",
