--- a/index.ipynb
+++ b/index.ipynb
@@ -18,7 +18,7 @@
     "## Objectives\n",
     "\n",
     "You will be able to:\n",
-    "- Understand the reason for using git\n",
+    "* Understand the reason for using git\n",
     "\n",
     "## Why Use Version Control?\n",
     "\n",
@@ -69,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
