fixed summary section for consistency with learning goals

--- a/index.ipynb
+++ b/index.ipynb
@@ -18,7 +18,7 @@
     "## Objectives\n",
     "\n",
     "You will be able to:\n",
-    "* Describe the purpose of version control and git\n",
+    "* Describe the purpose of version control and Git\n",
     "\n",
     "## Why Use Version Control?\n",
     "\n",
@@ -49,7 +49,7 @@
     "\n",
     "## Summary\n",
     "\n",
-    "In this lesson, you were introduced to version control and Git!"
+    "In this lesson, you were introduced to version control and Git, and the reasons we use it as part of our workflow!"
    ]
   }
  ],
