--- a/index.ipynb
+++ b/index.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Version Control 101\n",
+    "# Git Version Control 101\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -69,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
